--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>무더위쉼터 찾기 | 더위를 피해 안전한 쉼터를 찾아드립니다</title>
+    <title>[필로소피 AI 교육] 무더위쉼터 찾기 | 더위를 피해 안전한 쉼터를 찾아드립니다</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Maps API -->
@@ -17,7 +17,7 @@
             <div class="header-content">
                 <div class="logo">
                     <i class="fas fa-umbrella-beach"></i>
-                    <h1>무더위쉼터 찾기</h1>
+                    <h1>[필로소피 AI 교육] 무더위쉼터 찾기</h1>
                 </div>
                 <p class="subtitle">더위를 피할 수 있는 안전한 쉼터를 찾아드립니다</p>
             </div>
