--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <footer class="main-footer">
-            <p>&copy; 2025 무더위쉼터 찾기. 행정안전부 데이터 기반.</p>
+            <p>&copy; 2025 [필로소피 AI 교육] 무더위쉼터 찾기. 행정안전부 데이터 기반.</p>
         </footer>
     </div>
 
