--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[필로소피 AI 교육] 무더위쉼터 찾기 | 더위를 피해 안전한 쉼터를 찾아드립니다</title>
+    <title>[필로소피 AI 교육] 무더위쉼터 찾기</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Maps API -->
@@ -60,7 +60,7 @@
         </div>
 
         <footer class="main-footer">
-            <p>&copy; 2025 [필로소피 AI 교육] 무더위쉼터 찾기. 행정안전부 데이터 기반.</p>
+            <p>&copy; 2024 무더위쉼터 찾기. 행정안전부 데이터 기반.</p>
         </footer>
     </div>
 
